# animatediff-cli-prompt-travel-launcher

./: .gitignore  .prettierrc  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfiga.json  vite.config.ts
.output/: nitro.json
.output/public/: AntdIcon.22ef303b.js  CheckOutlined.61cd5a30.js  CloseCircleFilled.3288826c.js  CloseOutlined.92919b35.js  Col.48aa6d63.js  Compact.ff18982f.js  EyeOutlined.ee04c144.js  FormItemContext.6a0e0e16.js  HttpServer.12e89adf.js  HttpServer.2879f65b.css  InsertStyle.d154dc06.js  Ipc.3a38273b.js  Ipc.5b1702b3.js  Ipc.b89ed7de.css  Ipc.b9509c4a.css  Keyframes.e2f385c2.js  LeftOutlined.b6276360.js  Pic.181caf81.css  Pic.1b0450e1.js  SocketServer.681be2f6.js  SocketServer.7cb12780.css  Window.28a8fb62.js  Window.6a879d0f.css  _getTag.cf4696dc.js  collapseMotion.083a49ed.js  default.7460e5b6.js  default.7eab2744.css  devWarning.642abf93.js  entry.6387872f.css  entry.978b97f1.js  error-404.c14ed515.js  error-404.df71cba7.css  error-500.d0778168.css  error-500.dff00eaf.js  firstNotUndefined.9a4a1b8d.js  iconFont.4afa7fd1.js  index.0079209b.js  index.03d61709.js  index.06d45ff5.css  index.06e8506f.js  (+68 more)
electron/: ipcEvent.ts  main.ts  package.json  preload.ts
electron/config/: bin.js  config.default.js  config.local.js  config.prod.js  nodemon.json
electron/controller/: effect.js  example.js  framework.js  hardware.js  os.js
electron/service/: aap.ts  effect.js  example.js  framework.js  hardware.js  os.js
src/api/: main.ts
src/assets/: global.less  theme.less
src/layouts/: default.vue  (+1 more)
(+68 files in other folders)
