[tool.poetry]
name = "animatediff-cli-prompt-travel-launcher"
version = "0.1.0"
description = ""
authors = ["twocucao <twocucao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
